--- a/HTMLPractice/homepage.css
+++ b/HTMLPractice/homepage.css
@@ -15,6 +15,8 @@
     width:30%;
     height:30%;
     float:left;
+    position:relative;
+    left:2%;
     clear:none;
     margin:1%;
     background-color: #edf8ff;
@@ -23,10 +25,17 @@
 
 }
 
+.content-container
+{
+    overflow-x: hidden;
+    overflow-y:hidden;
+}
+
 .content-card img
 {
+    object-fit: cover;
     width:100%;
-    height:100%;
+    height:60vh;
 }
 
 .content-card:hover
@@ -91,15 +100,26 @@ header
     animation-delay: 12s;
     transition:left top 3s ease;
     
-    
-    
-}
-.main-container
-{
-overflow-y:scroll;
+
     
 }
 
+.content-title
+{
+    text-align: center;
+}
+.main-container
+{
+overflow-y:hidden;
+    
+}
+.content-text
+{
+    color:black;
+    text-align: center;
+    font-size: 35pt;
+    background-color: #66a8ff;
+}
 
 
 @keyframes moveText
