--- a/HTMLPractice/p1bb.css
+++ b/HTMLPractice/p1bb.css
@@ -5,13 +5,14 @@ table {
     border:10px solid #d0d0ff;
     background-color: white;
     border-spacing: 20px;
-    
+  
 }
 
 td {
  text-align:left ;
  border-bottom: 1px :#687291;
  padding-right: 5px;
+ 
 }
 
 th{
@@ -20,10 +21,14 @@ th{
     color: black; 
     padding-right: 10px;
   
+  
 }
   table td:nth-child(n+4) { text-align: center; }
-  table tr:nth-last-child(1) td {
+  
+.edge {
   border-bottom: 2px solid black;
-
-
 }
+  
+
+
+
